--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,7 @@
   --background-header: url('/assets/background-smkstlouis.jpg');
   --preset-dark-rgb: 43,48,53;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
